aded methods for profits in treansactions handler.created profits handlres, services and routes. se agrega doc de swagger
