# docs/swagger.yaml
@@ -5,6 +5,11 @@ definitions:
       error:
         type: string
     type: object
+  handlers.ProfitErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   handlers.SwaggerMerchantRequest:
     properties:
       commission:
@@ -177,6 +182,54 @@ paths:
       summary: Actualizar un comercio
       tags:
       - Comercios
+  /profits:
+    get:
+      description: Obtiene las ganancias de todas las transacciones registradas.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: number
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ProfitErrorResponse'
+      summary: Obtener las ganancias totales
+      tags:
+      - Ganancias
+  /profits/merchant/{merchant_id}:
+    get:
+      description: Obtiene las ganancias de un comercio específico mediante su ID.
+      parameters:
+      - description: ID del Comercio
+        in: path
+        name: merchant_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: number
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ProfitErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ProfitErrorResponse'
+      summary: Obtener las ganancias por comercio
+      tags:
+      - Ganancias
   /transactions:
     get:
       description: Obtener una lista de todas las transacciones realizadas.
